outputs/5974698.err
You are using pip version 9.0.1, however version 10.0.1 is available.
You should consider upgrading via the 'pip install --upgrade pip' command.
  File "train.py", line 1
    import comet_ml import Experiment
                         ^
SyntaxError: invalid syntax
